docs/0.17/_sources/api/gammapy.maps.RegionGeom.rst.txt
RegionGeom
==========

.. currentmodule:: gammapy.maps

.. autoclass:: RegionGeom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~RegionGeom.axes
      ~RegionGeom.axes_names
      ~RegionGeom.binsz
      ~RegionGeom.center_coord
      ~RegionGeom.center_pix
      ~RegionGeom.center_skydir
      ~RegionGeom.data_shape
      ~RegionGeom.frame
      ~RegionGeom.is_allsky
      ~RegionGeom.is_hpx
      ~RegionGeom.is_image
      ~RegionGeom.projection
      ~RegionGeom.region
      ~RegionGeom.wcs
      ~RegionGeom.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~RegionGeom.bin_volume
      ~RegionGeom.contains
      ~RegionGeom.contains_pix
      ~RegionGeom.coord_to_idx
      ~RegionGeom.coord_to_pix
      ~RegionGeom.coord_to_tuple
      ~RegionGeom.copy
      ~RegionGeom.create
      ~RegionGeom.crop
      ~RegionGeom.downsample
      ~RegionGeom.energy_mask
      ~RegionGeom.from_hdulist
      ~RegionGeom.get_axis_by_name
      ~RegionGeom.get_axis_index_by_name
      ~RegionGeom.get_coord
      ~RegionGeom.get_idx
      ~RegionGeom.make_bands_hdu
      ~RegionGeom.pad
      ~RegionGeom.pix_to_coord
      ~RegionGeom.pix_to_idx
      ~RegionGeom.separation
      ~RegionGeom.slice_by_idx
      ~RegionGeom.solid_angle
      ~RegionGeom.to_cube
      ~RegionGeom.to_image
      ~RegionGeom.union
      ~RegionGeom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: axes_names
   .. autoattribute:: binsz
   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: data_shape
   .. autoattribute:: frame
   .. autoattribute:: is_allsky
   .. autoattribute:: is_hpx
   .. autoattribute:: is_image
   .. autoattribute:: projection
   .. autoattribute:: region
   .. autoattribute:: wcs
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: bin_volume
   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: coord_to_tuple
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: energy_mask
   .. automethod:: from_hdulist
   .. automethod:: get_axis_by_name
   .. automethod:: get_axis_index_by_name
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: make_bands_hdu
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: separation
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: to_cube
   .. automethod:: to_image
   .. automethod:: union
   .. automethod:: upsample
